tests/invalid/aggregate/discrete_missing_shape.esm
{
  "esm": "0.6.0",
  "metadata": {
    "name": "discrete_missing_shape",
    "description": "INVALID (bead ess-my4.3.2; RFC semiring-faq-unified-ir §6.1 / §8): a `discrete` variable that omits the required `shape`. A discrete variable's defining property is that its shape is fixed and known at setup (it is the declared seed for the DISCRETE cadence class); the ModelVariable schema's kind-conditional `allOf` requires `shape` when `type` is \"discrete\". Omitting it is a pure schema (conditional-required-property) violation — caught by every binding. The variable is otherwise well-formed (it carries a valid refresh trigger), so the only failure cause is the missing shape.",
    "authors": [
      "EarthSciSerialization/polecats/gastown.capable"
    ],
    "tags": [
      "discrete-variable",
      "refresh-trigger",
      "invalid",
      "schema"
    ]
  },
  "models": {
    "BadDiscrete": {
      "variables": {
        "wind": {
          "type": "discrete",
          "description": "Discrete met field missing its required fixed shape — invalid.",
          "refresh": {
            "kind": "schedule",
            "interval": 3600.0
          }
        },
        "u": {
          "type": "state"
        }
      },
      "equations": [
        {
          "lhs": {
            "op": "D",
            "args": [
              "u"
            ],
            "wrt": "t"
          },
          "rhs": -1
        }
      ]
    }
  }
}
